Cherry-pick 7510aa30f017. rdar://problem/105731921

Fix use-after-move in CacheStorageDiskStore::writeRecords
    https://bugs.webkit.org/show_bug.cgi?id=252673
    rdar://105731921

    Reviewed by Youenn Fablet.

    Also add WTFMove() at places that are possible to do move assignment.

    * Source/WebKit/NetworkProcess/storage/CacheStorageCache.cpp:
    (WebKit::CacheStorageCache::open):
    (WebKit::CacheStorageCache::putRecordsInStore):
    * Source/WebKit/NetworkProcess/storage/CacheStorageDiskStore.cpp:
    (WebKit::decodeRecordHeader):
    (WebKit::CacheStorageDiskStore::writeRecords):

    Canonical link: https://commits.webkit.org/260643@main

Canonical link: https://commits.webkit.org/259548.255@safari-7615-branch